tests/test_data/CodeStructureSnippets/bad/expr_bad1.ifj21
require "ifj21"
function main()
    local vysl : integer = 1 + 2 + 0.5 + 9
end
main()